update:优化代码格式、文档