@@ -161,7 +161,7 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-        <!-- 火山云 TOS -->
+        <!-- 火山引擎 TOS -->
         <dependency>
             <groupId>com.volcengine</groupId>
             <artifactId>ve-tos-java-sdk</artifactId>
@@ -211,18 +211,5 @@
             <optional>true</optional>
         </dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
